<resources>
    <string name="app_name">MyMovies</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="collections">Collections</string>
    <string name="add_movie_to_collection">Add Movie to Collection</string>
    <string name="release_date">Release Date:</string>
    <string name="average_vote">Average Vote:</string>
    <string name="category">Category</string>
    <string name="action">Action</string>
    <string name="comedy">Comedy</string>
    <string name="drama">Drama</string>
    <string name="fantasy">Fantasy</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="thriller">Thriller</string>
    <string name="sort_by">Sort By</string>
    <string name="name">Name</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="score">Score</string>
    <string name="add_collection">Add Collection</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="categories">Categories</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="moviePoster">moviePoster</string>
    <string name="collection_name">Collection Name</string>
</resources>