<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:id="@+id/bottom_sheet_categories_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/category"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_on_primary"/>

    <TextView
        android:id="@+id/category_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/category_comedy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comedy"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/category_drama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drama"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/category_fantasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fantasy"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>



    <TextView
        android:id="@+id/category_mystery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mystery"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>


    <TextView
        android:id="@+id/category_romance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/romance"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/category_thriller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thriller"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

</LinearLayout>