<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background">

    <TextView
        android:id="@+id/bottom_sheet_sort_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/sort_by"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="28sp"
        android:textStyle="bold"/>

    <View
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/design_default_color_on_primary"/>

    <TextView
        android:id="@+id/sort_method_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/sort_method_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/sort_method_newest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newest"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="18sp"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/sort_method_oldest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oldest"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_margin="12dp"/>




</LinearLayout>