<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CollectionsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_margin="10dp"
            android:textSize="26sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collections" />


        <ImageView
            android:id="@+id/add_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_add_collection"
            android:contentDescription="@string/add_collection"/>

        <ImageView
            android:id="@+id/delete_collection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="14dp"
            android:src="@drawable/ic_delete_collection"
            android:contentDescription="@string/delete_collection" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/collection_names_recycle_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewShowCollectionMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>

</LinearLayout>